@@ -8,13 +8,15 @@ import java.awt.image.BufferedImage;
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 public class DhashUtils {
     public static long getImageDhashFrom(@NotNull InputStream inputStream) throws IOException {
         int width = 9;
         int height = 8;
-        List<InputStream> inputStreams = new ArrayList<>(List.of(inputStream));
+        List<InputStream> inputStreams = Collections.singletonList(inputStream);
         Thumbnails.Builder<InputStream> inputStreamBuilder = Thumbnails.fromInputStreams(inputStreams).forceSize(width, height);
         BufferedImage bufferedImage = inputStreamBuilder.asBufferedImage();
 
